<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentOverview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redbackground"
    android:orientation="vertical"
    tools:context="com.mah.ag0071.assigment1.OverviewFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/over_welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/over_firstname"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvFirstnameOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/over_surname"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvSurnameOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/balance"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvOverSaldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/income"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvOverIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expens"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvOverExpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnShowIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income" />

        <Button
            android:id="@+id/btnShowExpend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expens" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_title" />

    <Button
        android:id="@+id/btnManUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/over_btnUpdate" />

</LinearLayout>
