<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentAddIncome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redbackground"
    android:orientation="vertical"
    tools:context="com.mah.ag0071.assigment1.AddIncomeFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add"
        android:textAlignment="center"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/tvAddTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddAmount" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_transaction"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radioGroupAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/raBtnIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Income" />

            <RadioButton
                android:id="@+id/raBtnExpenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Expenses" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spListCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>

    </GridLayout>


    <EditText
        android:id="@+id/tvAddAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Amount"
        android:inputType="numberSigned"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPickDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:text="@string/add_btndate" />

    <Button
        android:id="@+id/btnAddIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_btnAdd" />

</LinearLayout>
